--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,25 @@
     <string name="menu">Menu</string>
     <string name="app_title">HERMES TRANSLATOR</string>
     <string-array name="spinner_source_languages">
-        <item>English</item>
-        <item>Japanese</item>
-        <item>Tagalog</item>
+            <item>English</item>
+            <item>Japanese</item>
+            <item>Tagalog</item>
+            <item>Korean</item>
+            <item>Hindi</item>
+            <item>Italian</item>
+            <item>Finnish</item>
+            <item>Dutch</item>
+            <item>Spanish</item>
     </string-array>
     <string-array name="spinner_direction_languages">
         <item>English</item>
         <item>Japanese</item>
         <item>Tagalog</item>
+        <item>Korean</item>
+        <item>Hindi</item>
+        <item>Italian</item>
+        <item>Finnish</item>
+        <item>Dutch</item>
+        <item>Spanish</item>
     </string-array>
 </resources>
